--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>S.I.G.I.C</title>
   </head>
   <body>
-    <div id="root" class=" h-screen flex flex-col justify-between"></div>
+    <div id="root" class="  flex flex-col justify-between min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
